--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "firebase": "^12.4.0",
+    "jspdf": "^3.0.3",
+    "lucide-react": "^0.553.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.7.0",
+    "scheduler": "^0.27.0",
     "typescript": "^4.9.0",
     "web-vitals": "^2.1.0"
   },
@@ -38,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0"
